// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type Snapshots renders beta type hierarchy 1`] = `
.emotion-0 {
  font-size: 28px;
  line-height: 36px;
  font-weight: 500;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-1 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  font-size: 20px;
  line-height: 28px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-3 {
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-4 {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-5 {
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  font-weight: 600;
}

.emotion-6 {
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  font-weight: 500;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
}

.emotion-7 {
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  font-weight: 500;
}

.emotion-8 {
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  color: #5e6a75;
}

.emotion-9 {
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  color: #de2e21;
}

.emotion-10 {
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0875e1;
  cursor: pointer;
}

.emotion-10:hover,
.emotion-10:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0875e1;
}

.emotion-10:focus {
  background: #d7eafc;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  outline: 2px solid #d7eafc;
}

.emotion-11 {
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  color: #ffffff;
  display: inline-block;
  background: #667380;
  padding: 2px 8px;
  border-radius: 3px;
}

.emotion-12 {
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  font-family: "Roboto Mono","Courier New",Courier,monospace;
}

<div>
  <h1
    style={
      Object {
        "color": "#333333",
        "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
        "fontSize": 56,
        "fontWeight": 700,
        "lineHeight": 1.3,
      }
    }
  >
    Brand 1 Header
  </h1>
  <h1
    style={
      Object {
        "color": "#333333",
        "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
        "fontSize": 48,
        "fontWeight": 700,
        "lineHeight": 1.3,
      }
    }
  >
    Brand 2 Header
  </h1>
  <div>
    <h1
      className="emotion-0"
    >
      H1 Header
    </h1>
    <h2
      className="emotion-1"
    >
      H2 Header
    </h2>
    <h3
      className="emotion-2"
    >
      H3 Header
    </h3>
    <h4
      className="emotion-3"
    >
      H4 Header
    </h4>
    <h5
      className="emotion-4"
    >
      H5 Header
    </h5>
    <h1
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": 40,
          "fontWeight": 500,
          "lineHeight": 1.3,
        }
      }
    >
      H1 Header
    </h1>
    <h2
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": 32,
          "fontWeight": 700,
          "lineHeight": 1.3,
        }
      }
    >
      H2 Header
    </h2>
    <h3
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": 24,
          "fontWeight": 700,
          "lineHeight": 1.3,
        }
      }
    >
      H3 Header
    </h3>
    <h4
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": 20,
          "fontWeight": 700,
          "lineHeight": 1.3,
        }
      }
    >
      H4 Header
    </h4>
    <h5
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": 20,
          "fontWeight": 400,
          "lineHeight": 1.3,
        }
      }
    >
      H5 Header
    </h5>
    <p
      style={
        Object {
          "color": "#494949",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": 16,
          "fontWeight": 400,
          "lineHeight": 1.5,
        }
      }
    >
      <strong>
        Body: 
      </strong>
       Tacos chartreuse raclette single-origin coffee ethical tilde ennui. Magna asymmetrical church-key farm-to-table dreamcatcher nisi iceland photo booth kitsch next level pop-up banh mi quinoa exercitation hella. Raw denim organic enim laboris sustainable. Polaroid occupy typewriter distillery. Kinfolk nisi man braid try-hard raw denim, thundercats salvia intelligentsia jean shorts officia. Heirloom craft beer put a bird on it occaecat
    </p>
    <p
      style={
        Object {
          "color": "#494949",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": 14,
          "fontWeight": 400,
          "lineHeight": 1.5,
        }
      }
    >
      <strong>
        Body 2: 
      </strong>
       Tacos chartreuse raclette single-origin coffee ethical tilde ennui. Magna asymmetrical church-key farm-to-table dreamcatcher nisi iceland photo booth kitsch next level pop-up banh mi quinoa exercitation hella. Raw denim organic enim laboris sustainable. Polaroid occupy typewriter distillery. Kinfolk nisi man braid try-hard raw denim, thundercats salvia intelligentsia jean shorts officia. Heirloom craft beer put a bird on it occaecat
    </p>
    <p
      style={
        Object {
          "color": "#494949",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": 13,
          "fontWeight": 400,
          "lineHeight": 1.5,
        }
      }
    >
      <strong>
        Small: 
      </strong>
       Tacos chartreuse raclette single-origin coffee ethical tilde ennui. Magna asymmetrical church-key farm-to-table dreamcatcher nisi iceland photo booth kitsch next level pop-up banh mi quinoa exercitation hella. Raw denim organic enim laboris sustainable. Polaroid occupy typewriter distillery. Kinfolk nisi man braid try-hard raw denim, thundercats salvia intelligentsia jean shorts officia. Heirloom craft beer put a bird on it occaecat
    </p>
    <hr />
    <h3
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": 24,
          "fontWeight": 700,
          "lineHeight": 1.3,
        }
      }
    >
      Variants
    </h3>
    <span
      className="emotion-5"
    >
      Button Text
    </span>
    <br />
    <span
      className="emotion-6"
    >
      Caps Text
    </span>
    <br />
    <label
      className="emotion-7"
    >
      Label Text
    </label>
    <br />
    <span
      className="emotion-8"
    >
      Hint Text
    </span>
    <br />
    <span
      className="emotion-9"
    >
      Error Text
    </span>
    <br />
    <a
      className="emotion-10"
      href="#"
    >
      Link Text
    </a>
    <br />
    <span
      className="emotion-11"
    >
      Inverse Text
    </span>
    <br />
    <span
      className="emotion-12"
    >
      Mono Text
    </span>
  </div>
</div>
`;

exports[`Type Snapshots renders current type hierarchy 1`] = `
.emotion-5 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  font-weight: 500;
}

.emotion-6 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  font-weight: 700;
  text-transform: uppercase;
}

.emotion-8 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  color: #5e6a75;
}

.emotion-9 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  color: #de2e21;
}

.emotion-10 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0875e1;
  cursor: pointer;
}

.emotion-10:hover,
.emotion-10:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0875e1;
}

.emotion-10:focus {
  background: #d7eafc;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  outline: 2px solid #d7eafc;
}

.emotion-11 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  color: #ffffff;
  display: inline-block;
  background: #667380;
  padding: 2px 8px;
  border-radius: 3px;
}

.emotion-12 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  font-family: "Roboto Mono","Courier New",Courier,monospace;
}

.emotion-0 {
  font-size: 28px;
  line-height: 36px;
  font-weight: 500;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-1 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  font-size: 20px;
  line-height: 28px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-3 {
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-4 {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

<div>
  <h1
    style={
      Object {
        "color": "#333333",
        "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
        "fontSize": "56px",
        "fontWeight": 300,
        "lineHeight": "68px",
      }
    }
  >
    Data Viz 1 Header
  </h1>
  <h1
    style={
      Object {
        "color": "#333333",
        "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
        "fontSize": "34px",
        "fontWeight": 300,
        "lineHeight": "40px",
      }
    }
  >
    Data Viz 2 Header
  </h1>
  <div>
    <h1
      className="emotion-0"
    >
      H1 Header
    </h1>
    <h2
      className="emotion-1"
    >
      H2 Header
    </h2>
    <h3
      className="emotion-2"
    >
      H3 Header
    </h3>
    <h4
      className="emotion-3"
    >
      H4 Header
    </h4>
    <h5
      className="emotion-4"
    >
      H5 Header
    </h5>
    <h1
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": "28px",
          "fontWeight": 500,
          "lineHeight": "36px",
        }
      }
    >
      H1 Header
    </h1>
    <h2
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": "24px",
          "fontWeight": 700,
          "lineHeight": "32px",
        }
      }
    >
      H2 Header
    </h2>
    <h3
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": "20px",
          "fontWeight": 700,
          "lineHeight": "28px",
        }
      }
    >
      H3 Header
    </h3>
    <h4
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": "16px",
          "fontWeight": 700,
          "lineHeight": "24px",
        }
      }
    >
      H4 Header
    </h4>
    <h5
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": "16px",
          "fontWeight": 400,
          "lineHeight": "24px",
        }
      }
    >
      H5 Header
    </h5>
    <p
      style={
        Object {
          "color": "#494949",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": "14px",
          "fontWeight": 400,
          "lineHeight": "20px",
        }
      }
    >
      <strong>
        Body: 
      </strong>
       Tacos chartreuse raclette single-origin coffee ethical tilde ennui. Magna asymmetrical church-key farm-to-table dreamcatcher nisi iceland photo booth kitsch next level pop-up banh mi quinoa exercitation hella. Raw denim organic enim laboris sustainable. Polaroid occupy typewriter distillery. Kinfolk nisi man braid try-hard raw denim, thundercats salvia intelligentsia jean shorts officia. Heirloom craft beer put a bird on it occaecat
    </p>
    <p
      style={
        Object {
          "color": "#494949",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": "13px",
          "fontWeight": 400,
          "lineHeight": "20px",
        }
      }
    >
      <strong>
        Body 2: 
      </strong>
       Tacos chartreuse raclette single-origin coffee ethical tilde ennui. Magna asymmetrical church-key farm-to-table dreamcatcher nisi iceland photo booth kitsch next level pop-up banh mi quinoa exercitation hella. Raw denim organic enim laboris sustainable. Polaroid occupy typewriter distillery. Kinfolk nisi man braid try-hard raw denim, thundercats salvia intelligentsia jean shorts officia. Heirloom craft beer put a bird on it occaecat
    </p>
    <p
      style={
        Object {
          "color": "#494949",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": "12px",
          "fontWeight": 400,
          "lineHeight": "16px",
        }
      }
    >
      <strong>
        Small: 
      </strong>
       Tacos chartreuse raclette single-origin coffee ethical tilde ennui. Magna asymmetrical church-key farm-to-table dreamcatcher nisi iceland photo booth kitsch next level pop-up banh mi quinoa exercitation hella. Raw denim organic enim laboris sustainable. Polaroid occupy typewriter distillery. Kinfolk nisi man braid try-hard raw denim, thundercats salvia intelligentsia jean shorts officia. Heirloom craft beer put a bird on it occaecat
    </p>
    <hr />
    <h3
      style={
        Object {
          "color": "#333333",
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", \\"Helvetica\\", Arial, sans-serif",
          "fontSize": "20px",
          "fontWeight": 700,
          "lineHeight": "28px",
        }
      }
    >
      Variants
    </h3>
    <span
      className="emotion-5"
    >
      Button Text
    </span>
    <br />
    <span
      className="emotion-6"
    >
      Caps Text
    </span>
    <br />
    <label
      className="emotion-5"
    >
      Label Text
    </label>
    <br />
    <span
      className="emotion-8"
    >
      Hint Text
    </span>
    <br />
    <span
      className="emotion-9"
    >
      Error Text
    </span>
    <br />
    <a
      className="emotion-10"
      href="#"
    >
      Link Text
    </a>
    <br />
    <span
      className="emotion-11"
    >
      Inverse Text
    </span>
    <br />
    <span
      className="emotion-12"
    >
      Mono Text
    </span>
  </div>
</div>
`;
